--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@
                     <div class="bg-image position-relative"
                         style="background-color: greenyellow; height: 300px; background-size: cover;">
                         <div class="overlay position-absolute top-50 start-50 translate-middle text-center">
-                            <h3 class="text-black">Desarrollo Web</h3>
+                            <h3 class="text-black">
+                              <a class="nav-link active" aria-current="page" href="paginas/desarrolloweb.html">Desarrollo Web</a>
+                            </h3>
                         </div>
                     </div>
                 </a>
@@ -169,7 +171,9 @@
                     <div class="bg-image position-relative"
                         style="background-color: greenyellow; height: 300px; background-size: cover;">
                         <div class="overlay position-absolute top-50 start-50 translate-middle text-center">
-                            <h3 class="text-black">Marketing Digital</h3>
+                            <h3 class="text-black">
+                              <a class="nav-link active" aria-current="page" href="paginas/marketingdigital.html">Marketing Digital</a>
+                            </h3>
                         </div>
                     </div>
                 </a>
@@ -179,7 +183,9 @@
                   <div class="bg-image position-relative"
                       style="background-color: greenyellow; height: 300px; background-size: cover;">
                       <div class="overlay position-absolute top-50 start-50 translate-middle text-center">
-                          <h3 class="text-black">Diseño Web</h3>
+                          <h3 class="text-black">
+                            <a class="nav-link active" aria-current="page" href="paginas/diseñoweb.html">Diseño Web</a>
+                          </h3>
                       </div>
                   </div>
               </a>
@@ -192,7 +198,10 @@
                     <div class="bg-image position-relative"
                         style="background-color: greenyellow; height: 300px; background-size: cover;">
                         <div class="overlay position-absolute top-50 start-50 translate-middle text-center">
-                            <h3 class="text-black">Branding</h3>
+                            <h3 class="text-black">
+                              <a class="nav-link active" aria-current="page" href="paginas/diseñoweb.html">Branding</a>
+
+                            </h3>
                         </div>
                     </div>
                 </a>
@@ -202,7 +211,10 @@
                     <div class="bg-image position-relative"
                         style="background-color: greenyellow; height: 300px; background-size: cover;">
                         <div class="overlay position-absolute top-50 start-50 translate-middle text-center">
-                            <h3 class="text-black">Ecommerce</h3>
+                            <h3 class="text-black">
+                              <a class="nav-link active" aria-current="page" href="paginas/diseñoweb.html">Ecommerce</a>
+
+                            </h3>
                         </div>
                     </div>
                 </a>
@@ -212,7 +224,9 @@
                     <div class="bg-image position-relative"
                         style="background-color: greenyellow; height: 300px; background-size: cover;">
                         <div class="overlay position-absolute top-50 start-50 translate-middle text-center">
-                            <h3 class="text-black">Estrategia Digital</h3>
+                            <h3 class="text-black">
+                              <a class="nav-link active" aria-current="page" href="paginas/diseñoweb.html">Estrategia Digital</a>
+                            </h3>
                         </div>
                     </div>
                 </a>
@@ -981,24 +995,21 @@
             </ul>
           </div>
         </div>
-        <div class="col-12 col-lg-6 bg-white get-started__box--right p-3">
-          <div class="form w-100">
-            <h4 class="display-3--title mb-4">Inicia tu Proyecto</h4>
+        <div class="col-12 col-lg-6 bg-black get-started__box--right p-3 ">
+          <div class="form w-100 m-0">
+            <h4 class="display-3--title text-white mb-4">Inicia tu Proyecto</h4>
             <form action="#" class="row">
               <div class="col-lg-6 col-md-6 mb-3">
-                <input type="text" placeholder="Nombre" id="inputFirstName" class="form-control-lg form-control">
+                <input type="text" placeholder="Nombre" id="inputFirstName" class="form-control-lg form-control bg-dark text-white border-0">
               </div>
               <div class="col-lg-6 col-md-6 mb-3">
-                <input type="text" placeholder="Apellido" id="inputLastName"
-                  class="form-control-lg form-control">
+                <input type="text" placeholder="Apellido" id="inputLastName" class="form-control-lg form-control bg-dark text-white border-0">
               </div>
               <div class="col-lg-12 mb-3">
-                <input type="email" placeholder="Correo Electrónico" id="inputEmail"
-                  class="form-control-lg form-control">
+                <input type="email" placeholder="Correo Electrónico" id="inputEmail" class="form-control-lg form-control bg-dark text-white border-0">
               </div>
               <div class="col-lg-12 mb-3">
-                <textarea name="message" placeholder="Mensaje" id="message" rows="8"
-                  class="form-control-lg form-control"></textarea>
+                <textarea name="message" placeholder="Mensaje" id="message" rows="8" class="form-control-lg form-control bg-dark text-white border-0"></textarea>
               </div>
               <div class="text-center d-grid mt-1">
                 <button type="button" class="btn btn-primary rounded-pill pt-3 pb-3">
@@ -1009,6 +1020,7 @@
             </form>
           </div>
         </div>
+        
       </div>
     </div>
   </section>
