--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@
         </div>
         <div class="bg-white p-4 text-start">
           <p class="fw-light lead">
+            Tu exito comienza aqui.
+
+          </p>
+          <p class="fw-light lead">
             Como agencia digital 360, simplificamos la innovación y transformación digital, fundamentales en el entorno
             empresarial actual. Ofrecemos una amplia gama de servicios, desde branding digital y diseño web hasta
             marketing digital y estrategias de inbound marketing.
@@ -159,7 +163,7 @@
             <div class="col-md-4 mb-4">
                 <a href="pagina1.html" class="d-block position-relative" >
                     <div class="bg-image position-relative" 
-                        style="background-color: greenyellow; height: 300px; background-size: cover;border-radius: 12px;">
+                        style="background-color: greenyellow; height: 300px; background-size: cover; border-radius: 16px;">
                         <div class="overlay position-absolute top-50 start-50 translate-middle text-center">
                             <h3 class="text-black">
                               <a class="nav-link active" aria-current="page" href="paginas/desarrolloweb.html">Desarrollo Web</a>
@@ -171,7 +175,7 @@
             <div class="col-md-4 mb-4">
                 <a href="pagina1.html" class="d-block position-relative">
                     <div class="bg-image position-relative"
-                        style="background-color: greenyellow; height: 300px; background-size: cover;">
+                        style="background-color: greenyellow; height: 300px; background-size: cover;  border-radius: 16px;">
                         <div class="overlay position-absolute top-50 start-50 translate-middle text-center">
                             <h3 class="text-black">
                               <a class="nav-link active" aria-current="page" href="paginas/marketingdigital.html">Marketing Digital</a>
@@ -183,7 +187,7 @@
             <div class="col-md-4 mb-4">
               <a href="pagina1.html" class="d-block position-relative">
                   <div class="bg-image position-relative"
-                      style="background-color: greenyellow; height: 300px; background-size: cover;">
+                      style="background-color: greenyellow; height: 300px; background-size: cover;  border-radius: 16px;">
                       <div class="overlay position-absolute top-50 start-50 translate-middle text-center">
                           <h3 class="text-black">
                             <a class="nav-link active" aria-current="page" href="paginas/diseñoweb.html">Diseño Web</a>
@@ -198,7 +202,7 @@
             <div class="col-md-4 mb-4">
                 <a href="pagina1.html" class="d-block position-relative">
                     <div class="bg-image position-relative"
-                        style="background-color: greenyellow; height: 300px; background-size: cover;">
+                        style="background-color: greenyellow; height: 300px; background-size: cover;  border-radius: 16px;">
                         <div class="overlay position-absolute top-50 start-50 translate-middle text-center">
                             <h3 class="text-black">
                               <a class="nav-link active" aria-current="page" href="paginas/diseñoweb.html">Branding</a>
@@ -211,7 +215,7 @@
             <div class="col-md-4 mb-4">
                 <a href="pagina1.html" class="d-block position-relative">
                     <div class="bg-image position-relative"
-                        style="background-color: greenyellow; height: 300px; background-size: cover;">
+                        style="background-color: greenyellow; height: 300px; background-size: cover;  border-radius: 16px;">
                         <div class="overlay position-absolute top-50 start-50 translate-middle text-center">
                             <h3 class="text-black">
                               <a class="nav-link active" aria-current="page" href="paginas/diseñoweb.html">Ecommerce</a>
@@ -224,7 +228,7 @@
             <div class="col-md-4 mb-4">
                 <a href="pagina1.html" class="d-block position-relative">
                     <div class="bg-image position-relative"
-                        style="background-color: greenyellow; height: 300px; background-size: cover;">
+                        style="background-color: greenyellow; height: 300px; background-size: cover;  border-radius: 16px;">
                         <div class="overlay position-absolute top-50 start-50 translate-middle text-center">
                             <h3 class="text-black">
                               <a class="nav-link active" aria-current="page" href="paginas/diseñoweb.html">Estrategia Digital</a>
@@ -295,63 +299,8 @@
   <!-- START THE DESCRIPTION CONTENT -->
 
 
-  <!-- START THE CONTENT FOR THE SERVICES -->
+  
 
-  <!-- <div class="container px-5"> -->
-
-
-  <!-- START WEB DESIGN CONTENT -->
-
-  <!-- <div class="row px-0 px-lg-5">
-        <div class="row text-center">
-          <h1 class="display-3 fw-bold">Servicios</h1>
-          <div class="heading-line mb-1"></div>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto order-1 order-md-0">
-          <div class="services__content">
-
-            <div class="icon d-block fas fa-cloud-upload-alt"></div>
-            <h3 class="display-3--title mt-1">Diseño web</h3>
-            <p class="lh-lg">
-              Damos vida a tu visión online con nuestro diseño web innovador y personalizado.
-            </p>
-            <a href="#contact">
-              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
-                    class="fas fa-arrow-right"></i></span></button>
-            </a>
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services text-end my-auto">
-          <div class="services__pic">
-            <img src="images/services/service-3.png" alt="cloud hosting illustration" class="img-fluid">
-          </div>
-        </div>
-      </div> -->
-
-
-  <!-- START THE WEB DEVELOPMENT CONTENT -->
-
-  <!-- <div class="row px-0 px-lg-5">
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto text-start">
-          <div class="services__pic">
-            <img src="images/services/service-2.png" alt="web development illustration" class="img-fluid">
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto">
-          <div class="services__content">
-            <div class="icon d-block fas fa-code"></div>
-            <h3 class="display-3--title mt-1">Branding </h3>
-            <p class="lh-lg">
-              Destaca tu marca con estrategias de branding que la diferencian y atraen.
-            </p>
-            <a href="#contact">
-              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
-                    class="fas fa-arrow-right"></i></span></button>
-            </a>
-          </div>
-        </div>
-      </div>
- -->
 
 
   <!-- START THE MARKETING CONTENT -->
@@ -720,9 +669,10 @@
   <section id="faq" class="faq">
     <div class="container">
       <div class="row text-center">
-        <h1 class="display-3 fw-bold ">Proyectos</h1>
+        <h1 class="display-3 fw-bold ">Nuestros proyectos</h1>
         <!-- <div class="heading-line"></div> -->
-        <p class="lead">Algunos proyectos recientes, get knowledge before hand</p>
+        <p class="lead">En cada proyecto, nos esforzamos por alcanzar la excelencia en todas sus etapas. Estos
+          son algunos de nuestros casos de éxito con clientes:</p>
       </div>
 
       <!-- <div class="row">
@@ -829,10 +779,10 @@
 
    
       <div class="row">
-        <div class="col-lg-4 col-md-6 portfolio-card" data-tags="all, design">
-          <div class="portfolio-box">
+        <div class="col-lg-4 col-md-6 portfolio-card " data-tags="all, design">
+          <div class="portfolio-box ">
               <a href="images/portfolio/portfolio-4.jpg" class="glightbox2">
-                  <img src="images/portfolio/portfolio-4.jpg" alt="portfolio 4 image" title="portfolio 4 picture" class="img-fluid">
+                  <img src="images/portfolio/portfolio-4.jpg" alt="portfolio 4 image" title="portfolio 4 picture" class="img-fluid ">
                   <div class="div portfolio-info">
                       <div class="caption">
                           <i class="fas fa-magnifying-glass mb-3"></i>
@@ -935,8 +885,8 @@
           <div class="cta-info w-100">
             <h4 class="display-4 fw-bold">¿Quieres que hablemos?</h4>
             <p class="lh-lg">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum, perspiciatis. Eaque nobis eos, soluta
-              esse voluptate et nihil libero aut voluptates!
+              Si te ha gustado lo que has visto y deseas que formemos parte de tu proyecto, estaremos
+encantados de escucharte. Completa el formulario y te responderemos lo antes posible.&quot;
             </p>
             <h3 class="display-3--brief">¿Cuál será el siguiente paso?</h3>
             <ul class="cta-info__list">
