--- a/paginas/agencia.html
+++ b/paginas/agencia.html
@@ -49,7 +49,7 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="../paginas/blog.html">Blog</a>
           </li>
-    
+
         </ul>
         <button type="button" class="custom-button">Tengo un proyecto</button>
       </div>
@@ -66,13 +66,12 @@
 
         <div class="col-md-6 intros text-start">
           <h1 class="display-2">
-            <span class="display-2--intro">Marketing digital y Desarrollo web para tu negocio</span>
+            <span class="display-2--intro">Agencia de Diseño Web</span>
             <p class="display-2--description lh-base small">
-              Somos tu puerta de entrada al éxito en el mundo digital. Con una sólida experiencia en webs y marketing
-              digital,
-              estamos aquí para llevar tu presencia en línea al siguiente nivel...
-              ¿Listo para el cambio?
-
+              Somos más que una empresa de diseño web; somos una agencia digital especializada en
+              la creación de activos digitales. Nuestro enfoque va más allá del diseño de páginas web,
+              abarcando una variedad de proyectos digitales, como páginas corporativas, tiendas online
+              y plataformas digitales.
             </p>
           </h1>
           <a id="services" href="#servicios">
@@ -106,23 +105,162 @@
   </section>
 
 
-    <!-- Contenido del blog -->
-    <section id="blog" class="blog">
-        <div class="container">
-            <div class="row text-center">
-                <h1 class="display-3 fw-bold">Agencia</h1>
-                <p class="lead">AGENCIA</p>
-            </div>
+  <!-- Contenido del blog -->
+  <section id="blog" class="blog">
+    <div class="container">
+      <div class="row text-center">
+        <h1 class="display-3 fw-bold ">Somos una agencia de diseño web</h1>
+        <!-- <div class="heading-line"></div> -->
+        <p class="lead">Con una amplia experiencia en diseño web, hemos evolucionado junto a la tecnología,
+          adaptando nuestra metodología y conocimientos constantemente para satisfacer las
+          necesidades de nuestros clientes y cumplir con los nuevos estándares.</p>
+      </div>
+    </div>
+  </section>
+   <!-- Contenido del services -->
+   <section id="services" class="services">
 
-            <div class="row">
-                <div id="blog-content" class="col-md-12">
-                    <!-- Aquí se cargará el contenido del blog dinámicamente -->
-                </div>
-            </div>
+
+
+    <!-- START SERVICES CONTENT -->
+
+    <div class="container px-5">
+      <!-- SERVICES 1 -->
+      <div class="row px-0 px-lg-5">
+
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto order-1 order-md-0">
+          <div class="services__content">
+
+            <div class="icon d-block fas fa-cloud-upload-alt"></div>
+            <h3 class="display-3--title mt-1">01 Diseño UX/UI
+            </h3>
+            <p class="lh-lg">
+              Nos especializamos en potenciar negocios digitales a través del diseño UX y UI.
+Creamos experiencias de usuario memorables para diversos productos digitales,
+incluyendo sitios web y plataformas digitales.
+            </p>
+            <a href="#contact">
+              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
+                    class="fas fa-arrow-right"></i></span></button>
+            </a>
+          </div>
         </div>
-    </section>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services text-end my-auto">
+          <div class="services__pic">
+            <img src="../images/services/service-3.png" alt="cloud hosting illustration" class="img-fluid">
+          </div>
+        </div>
+      </div>
 
-     <!-- START SECTION 9 - THE FOOTER  -->
+
+      <!-- SERVICES 2 -->
+      <div class="row px-0 px-lg-5">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto text-start">
+          <div class="services__pic">
+            <img src="../images/services/service-2.png" alt="web development illustration" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto">
+          <div class="services__content">
+            <div class="icon d-block fas fa-code"></div>
+            <h3 class="display-3--title mt-1">02 Diseño web a medida </h3>
+            <p class="lh-lg">
+              Nos especializamos en la creación de diseños web completamente
+personalizados, diseñados específicamente para satisfacer las necesidades únicas
+y los objetivos de tu negocio, asegurando una presencia en línea efectiva y
+memorable.
+            </p>
+            <a href="#contact">
+              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
+                    class="fas fa-arrow-right"></i></span></button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- SERVICES 3 -->
+      <div class="row px-0 px-lg-5">
+
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto order-1 order-md-0">
+          <div class="services__content">
+
+            <div class="icon d-block fas fa-cloud-upload-alt"></div>
+            <h3 class="display-3--title mt-1">03 Desarrollo web
+            </h3>
+            <p class="lh-lg">
+              Somos una empresa de desarrollo web profesional especializada en diseñar y
+desarrollar sitios web diferentes alineados con la estrategia de marketing online de
+de la marca.
+            </p>
+            <a href="#contact">
+              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
+                    class="fas fa-arrow-right"></i></span></button>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services text-end my-auto">
+          <div class="services__pic">
+            <img src="../images/services/service-3.png" alt="cloud hosting illustration" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+      <!-- SERVICES 4 -->
+      <div class="row px-0 px-lg-5">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto text-start">
+          <div class="services__pic">
+            <img src="../images/services/service-2.png" alt="web development illustration" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto">
+          <div class="services__content">
+            <div class="icon d-block fas fa-code"></div>
+            <h3 class="display-3--title mt-1">04 Desarrollo de tiendas online y ecommerce </h3>
+            <p class="lh-lg">
+              Nos especializamos en el desarrollo de tiendas en línea optimizadas para la
+conversión, diseñadas para ayudarte a aumentar tus ventas y maximizar el
+rendimiento de tu negocio en línea.
+            </p>
+            <a href="#contact">
+              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
+                    class="fas fa-arrow-right"></i></span></button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- SERVICES 5 -->
+      <div class="row px-0 px-lg-5">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto order-1 order-md-0">
+          <div class="services__content">
+
+            <div class="icon d-block fas fa-cloud-upload-alt"></div>
+            <h3 class="display-3--title mt-1">05 Diseño CRO
+            </h3>
+            <p class="lh-lg">
+              Ofrecemos un enfoque estratégico para optimizar el diseño digital, con el
+              objetivo de mejorar la tasa de conversión y maximizar los resultados de tu
+              sitio web o aplicaciónPrincipio del formulario
+            </p>
+            <a href="#contact">
+              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
+                    class="fas fa-arrow-right"></i></span></button>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services text-end my-auto">
+          <div class="services__pic">
+            <img src="../images/services/service-3.png" alt="cloud hosting illustration" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+  </section>
+
+
+  <!-- START SECTION 9 - THE FOOTER  -->
 
   <footer class="footer">
     <div class="container">
