--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -49,7 +49,7 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="../paginas/blog.html">Blog</a>
           </li>
-    
+
         </ul>
         <button type="button" class="custom-button">Tengo un proyecto</button>
       </div>
@@ -66,18 +66,18 @@
 
         <div class="col-md-6 intros text-start">
           <h1 class="display-2">
-            <span class="display-2--intro">Marketing digital y Desarrollo web para tu negocio</span>
+            <span class="display-2--intro">Agencia de Marketing Digital</span>
             <p class="display-2--description lh-base small">
-              Somos tu puerta de entrada al éxito en el mundo digital. Con una sólida experiencia en webs y marketing
-              digital,
-              estamos aquí para llevar tu presencia en línea al siguiente nivel...
-              ¿Listo para el cambio?
+              Tu éxito digital comienza aquí. Nos enfocamos en impulsar los resultados de tus
+              activos digitales en términos de negocio, visibilidad y retorno. Ajustamos nuestras
+              estrategias a tu presupuesto para obtener mayores beneficios con menos
+              inversión.
 
             </p>
           </h1>
           <a id="services" href="#servicios">
             <button type="button" class="rounded-pill btn-rounded">
-              Más información<span><i class="fas fa-arrow-right"></i></span>
+              Tu éxito digital comienza aquí.<span><i class="fas fa-arrow-right"></i></span>
             </button>
           </a>
         </div>
@@ -106,23 +106,150 @@
   </section>
 
 
-    <!-- Contenido del blog -->
-    <section id="blog" class="blog">
-        <div class="container">
-            <div class="row text-center">
-                <h1 class="display-3 fw-bold">Servicios</h1>
-                <p class="lead">SERVICIOS</p>
-            </div>
+  <!-- Contenido del services -->
+  <section id="services" class="services">
 
-            <div class="row">
-                <div id="blog-content" class="col-md-12">
-                    <!-- Aquí se cargará el contenido del blog dinámicamente -->
-                </div>
-            </div>
+
+
+    <!-- START SERVICES CONTENT -->
+
+    <div class="container px-5">
+      <!-- SERVICES 1 -->
+      <div class="row px-0 px-lg-5">
+
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto order-1 order-md-0">
+          <div class="services__content">
+
+            <div class="icon d-block fas fa-cloud-upload-alt"></div>
+            <h3 class="display-3--title mt-1">01 Posicionamiento Web SEO
+            </h3>
+            <p class="lh-lg">
+              Implementamos estrategias SEO para potenciar la visibilidad de tu sitio web
+              en los motores de búsqueda y garantizar un mayor tráfico orgánico y
+              resultados duraderos.
+            </p>
+            <a href="#contact">
+              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
+                    class="fas fa-arrow-right"></i></span></button>
+            </a>
+          </div>
         </div>
-    </section>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services text-end my-auto">
+          <div class="services__pic">
+            <img src="../images/services/service-3.png" alt="cloud hosting illustration" class="img-fluid">
+          </div>
+        </div>
+      </div>
 
-     <!-- START SECTION 9 - THE FOOTER  -->
+
+      <!-- SERVICES 2 -->
+      <div class="row px-0 px-lg-5">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto text-start">
+          <div class="services__pic">
+            <img src="../images/services/service-2.png" alt="web development illustration" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto">
+          <div class="services__content">
+            <div class="icon d-block fas fa-code"></div>
+            <h3 class="display-3--title mt-1">02 Posicionamiento SEM </h3>
+            <p class="lh-lg">
+              Te ofrecemos una estrategia SEM efectiva y personalizada para impulsar la
+              visibilidad de tu negocio en línea, atrayendo tráfico cualificado y
+              maximizando el retorno de tu inversión publicitaria.
+            </p>
+            <a href="#contact">
+              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
+                    class="fas fa-arrow-right"></i></span></button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- SERVICES 3 -->
+      <div class="row px-0 px-lg-5">
+
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto order-1 order-md-0">
+          <div class="services__content">
+
+            <div class="icon d-block fas fa-cloud-upload-alt"></div>
+            <h3 class="display-3--title mt-1">03 Community Manager
+            </h3>
+            <p class="lh-lg">
+              Con nuestro servicio de Community Manager, potenciamos tu presencia en
+              redes sociales, generando relaciones sólidas con tu audiencia para
+              aumentar la visibilidad y el compromiso con tu marca.
+            </p>
+            <a href="#contact">
+              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
+                    class="fas fa-arrow-right"></i></span></button>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services text-end my-auto">
+          <div class="services__pic">
+            <img src="../images/services/service-3.png" alt="cloud hosting illustration" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+      <!-- SERVICES 4 -->
+      <div class="row px-0 px-lg-5">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto text-start">
+          <div class="services__pic">
+            <img src="../images/services/service-2.png" alt="web development illustration" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto">
+          <div class="services__content">
+            <div class="icon d-block fas fa-code"></div>
+            <h3 class="display-3--title mt-1">04 Social Media Marketing </h3>
+            <p class="lh-lg">
+              Nos especializamos en desarrollar estrategias efectivas de Social Media
+              Marketing para potenciar tu presencia en línea, aumentar la interacción con
+              tu audiencia y alcanzar tus objetivos de negocio en las redes sociales.
+            </p>
+            <a href="#contact">
+              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
+                    class="fas fa-arrow-right"></i></span></button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- SERVICES 5 -->
+      <div class="row px-0 px-lg-5">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto order-1 order-md-0">
+          <div class="services__content">
+
+            <div class="icon d-block fas fa-cloud-upload-alt"></div>
+            <h3 class="display-3--title mt-1">05 Diseño CRO
+            </h3>
+            <p class="lh-lg">
+              Ofrecemos un enfoque estratégico para optimizar el diseño digital, con el
+              objetivo de mejorar la tasa de conversión y maximizar los resultados de tu
+              sitio web o aplicaciónPrincipio del formulario
+            </p>
+            <a href="#contact">
+              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
+                    class="fas fa-arrow-right"></i></span></button>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services text-end my-auto">
+          <div class="services__pic">
+            <img src="../images/services/service-3.png" alt="cloud hosting illustration" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+  </section>
+
+
+
+  <!-- START SECTION 9 - THE FOOTER  -->
 
   <footer class="footer">
     <div class="container">
